2003-12-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sample/CanvasTextBox.cs: Removed not needed using line
	* PROBLEMS: Added extra info on casting problem
	* sample/sample.cs: Added extra info on casting problem
	* configure.in: Updated dependency check
	* NEWS: Updated news for 0.3.0
	* Released 0.3.0

2003-12-03  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/Dia/CanvasLine.xml: Documented
	* doc/en/Dia/*.xml: Gettified all GType properties

2003-11-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sample/sample.cs: Check for ctrl modifier the proper way.
	* README: Removed reqs, they are detected by configure now.

2003-11-17  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/dia/CanvasEditable.xml: Documented
	* doc/en/dia/CanvasGroupable.xml: Documented
	* doc/diacanvas-docs.zip: Removed
	* doc/diacanvas-docs.tree: Ditto
	* glue/dia-canvas-item.c: Added set accessor for canvas field
	* dia/CanvasItem.custom: Ditto
	* PROBLEMS: Pango.Font problem fixed in Gtk-sharp-0.12
	* sample/sample.cs: Use pango fonts, now the problem is gone.
	* sample/CanvasTextBox.cs: One step closer to make custom CanvasItem's.

2003-11-15  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* doc/en/dia/WrapMode.xml: Documented
	* doc/en/dia/ConstraintFunc.xml: Documented
	* doc/en/dia/CanvasItem.xml: Reflects that Is and Has methods are now properties
	* doc/en/dia/CanvasViewItem.xml: Ditto
	* doc/en/dia/Constraint.xml: Ditto
	* doc/en/dia/Canvas.xml: Documented GType property
	* doc/en/dia/Variable.xml: Ditto
	* doc/en/dia/Tool.xml: Ditto
	* doc/en/dia/StackTool.xml: Ditto
	* doc/en/dia/Solver.xml: Ditto
	* doc/en/dia/Shape.xml: Ditto
	* doc/en/dia/ShapeText.xml: Ditto
	* doc/en/dia/ShapePath.xml: Ditto
	* doc/en/dia/ShapeImage.xml: Ditto
	* doc/en/dia/ShapeEllipse.xml: Ditto
	* doc/en/dia/ShapeBezier.xml: Ditto
	* doc/en/dia/Selector.xml: Ditto
	* doc/en/dia/Rectangle.xml: Ditto
	* doc/en/dia/Point.xml: Ditto
	* doc/en/dia/Handle.xml: Ditto
	* doc/en/dia/HandleLayer.xml: Ditto