@@ -1,6 +1,6 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(diacanvas-sharp, 0.3.0)
+AM_INIT_AUTOMAKE(diacanvas-sharp, 0.4.0)
 AM_MAINTAINER_MODE
 AM_PROG_LIBTOOL
 
@@ -23,7 +23,7 @@ PKG_CHECK_MODULES(MONO, mono >= 0.29)
 AC_SUBST(MONO_CFLAGS)
 AC_SUBST(MONO_LIBS)
 
-PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 0.14)
+PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 0.15)
 AC_SUBST(GTK_SHARP_CFLAGS)
 AC_SUBST(GTK_SHARP_LIBS)
 
